--- a/mnist_visualization_with_occlusion_and_guided_backpropagation_maps.ipynb
+++ b/mnist_visualization_with_occlusion_and_guided_backpropagation_maps.ipynb
@@ -72,23 +72,23 @@
     "\n",
     "# MaxPool2D wrapper\n",
     "def maxpool2d(x, name, k=2):\n",
-    "    return tf.nn.max_pool(x, ksize=[1, k, k, 1], strides=[1, k, k, 1],padding='SAME',name=name)\n",
+    "    return tf.nn.max_pool(x, ksize=[1, k, k, 1], strides=[1, k, k, 1], padding='SAME', name=name)\n",
     "    #return tf.nn.avg_pool(x, ksize=[1, k, k, 1], strides=[1, k, k, 1],padding='SAME',name=name)\n",
     "\n",
     "# Create model\n",
     "def conv_net(x, weights, biases):\n",
     "    # Reshape input picture\n",
-    "    x = tf.reshape(x, shape=[-1, 28, 28, 1],name=\"reshapedInput\")\n",
+    "    x = tf.reshape(x, shape=[-1, 28, 28, 1], name=\"reshapedInput\")\n",
     "\n",
     "    # Convolution Layer 1\n",
-    "    conv1 = conv2d(x, weights['wc1'], biases['bc1'],name=\"conv1\")\n",
-    "    conv1 = maxpool2d(conv1, k=2,name=\"maxpool1\")\n",
+    "    conv1 = conv2d(x, weights['wc1'], biases['bc1'], name=\"conv1\")\n",
+    "    conv1 = maxpool2d(conv1, k=2, name=\"maxpool1\")\n",
     "    #print(conv1.get_shape())\n",
     "\n",
     "    # Convolution Layer 2\n",
-    "    conv2 = conv2d(conv1, weights['wc2'], biases['bc2'],name=\"conv2\")\n",
+    "    conv2 = conv2d(conv1, weights['wc2'], biases['bc2'], name=\"conv2\")\n",
     "    # Max Pooling (down-sampling)\n",
-    "    conv2 = maxpool2d(conv2, k=2,name=\"maxpool2\")\n",
+    "    conv2 = maxpool2d(conv2, k=2, name=\"maxpool2\")\n",
     "    #print(conv2.get_shape())\n",
     "\n",
     "    # Fully connected layer\n",
@@ -100,7 +100,7 @@
     "    fc2 = tf.add(tf.matmul(fc1, weights['wd2']), biases['bd2'])\n",
     "\n",
     "    # Output, class prediction\n",
-    "    out = tf.add(tf.matmul(fc2, weights['out']), biases['out'],name=\"last10nodes\")\n",
+    "    out = tf.add(tf.matmul(fc2, weights['out']), biases['out'], name=\"last10nodes\")\n",
     "    return out"
    ]
   },
@@ -274,19 +274,20 @@
    },
    "outputs": [],
    "source": [
-    "def createOcclusion(im,roi_size):     \n",
-    "    iters = (28-roi_size+1) \n",
-    "    batch_size = iters**2+1\n",
-    "    batch = np.ndarray([batch_size, 28, 28,1])\n",
+    "def createOcclusion(im, roi_size):     \n",
+    "    iters = (28 - roi_size + 1) \n",
+    "    batch_size = iters**2 + 1\n",
+    "    batch = np.ndarray([batch_size, 28, 28, 1])\n",
     "    i = 0\n",
-    "    for r in range(0,iters):\n",
-    "        for c in range(0,iters):\n",
+    "    for r in range(0, iters):\n",
+    "        for c in range(0, iters):\n",
     "            imOc = np.copy(im)\n",
-    "            imOc[r:r+roi_size-1,c:c+roi_size-1,0] = 0            \n",
+    "            imOc[r:r+roi_size-1, c:c+roi_size-1, 0] = 0            \n",
     "            batch[i] = imOc           \n",
     "            i = i + 1\n",
     "    batch[i] = np.copy(im)\n",
     "    return batch\n",
+    "\n",
     "\n",
     "def softmax(w):\n",
     "    w = np.array(w)\n",
@@ -296,13 +297,14 @@
     "    dist = e / np.sum(e, axis=1)[:,None]\n",
     "    return dist\n",
     "\n",
-    "def createOcclusionHeatMap(img,roi_size):\n",
+    "\n",
+    "def createOcclusionHeatMap(img, roi_size):\n",
     "    with tf.Session() as sess:\n",
     "        tf.train.Saver().restore(sess, \"/tmp/model.ckpt\")\n",
     "        model=sess.graph\n",
-    "        occulationBatch=createOcclusion(img,roi_size)\n",
-    "        feed_dict = {x: occulationBatch.reshape(len(occulationBatch),784)}\n",
-    "        y_preds, preds = sess.run([y_pred, pred],feed_dict=feed_dict)\n",
+    "        occulationBatch=createOcclusion(img, roi_size)\n",
+    "        feed_dict = {x: occulationBatch.reshape(len(occulationBatch), 784)}\n",
+    "        y_preds, preds = sess.run([y_pred, pred], feed_dict=feed_dict)\n",
     "        \n",
     "        cl=np.argmax(y_preds[-1])\n",
     "        print(\"Predicted digit of the image: \"+str(cl))\n",
@@ -310,31 +312,28 @@
     "        \n",
     "        count_map=np.zeros((28,28))\n",
     "        prob_map=np.zeros((28,28))\n",
-    "        #prob_map=np.ones((28,28))\n",
     "        hmdim=(28-roi_size+1)\n",
     "        k=0\n",
     "        for i in range(hmdim):\n",
     "            for j in range(hmdim):\n",
-    "                prob=y_preds[k][cl]\n",
-    "                if prob<0.0:\n",
+    "                prob = y_preds[k][cl]\n",
+    "                if prob < 0.0:\n",
     "                    print(preds[k])\n",
     "                    print(y_preds[k])\n",
-    "                k+=1\n",
-    "                count_map[i:i+roi_size,j:j+roi_size]+=1.0\n",
-    "                prob_map[i:i+roi_size,j:j+roi_size]+=prob\n",
-    "                #for ip in range(i,i+roi_size):\n",
-    "                #    for jp in range(j,j+roi_size):\n",
-    "                #        prob_map[ip,jp]=min(prob,prob_map[ip,jp])\n",
+    "                k += 1\n",
+    "                count_map[i:i+roi_size, j:j+roi_size] += 1.0\n",
+    "                prob_map[i:i+roi_size, j:j+roi_size] += prob\n",
+    "\n",
     "\n",
     "        for i in range(28):\n",
     "            for j in range(28):\n",
-    "                if count_map[i,j]>0:\n",
-    "                    prob_map[i,j]/=count_map[i,j]\n",
-    "                    prob_map[i,j]=1.0-prob_map[i,j]\n",
+    "                if count_map[i,j] > 0:\n",
+    "                    prob_map[i,j] /= count_map[i,j]\n",
+    "                    prob_map[i,j] = 1.0 - prob_map[i,j]\n",
     "        \n",
     "        fig, axes = plt.subplots(nrows=1, ncols=2)\n",
-    "        axes[0].matshow(img.reshape(28,28),cmap='gray')\n",
-    "        pmap=axes[1].matshow(prob_map,cmap='Reds')\n",
+    "        axes[0].matshow(img.reshape(28,28), cmap='gray')\n",
+    "        pmap=axes[1].matshow(prob_map, cmap='Reds')\n",
     "        cbar=plt.colorbar(pmap, fraction=0.025, pad=0.0)\n",
     "        cbar.set_clim(0, 1.0)\n",
     "        cbar.draw_all()\n",
@@ -570,22 +569,22 @@
     "        y, pred_v, grad = sess.run([  y_pred ,pred, gradient],feed_dict=feed_dict) \n",
     "        '''\n",
     "        pred = conv_net(x, weights, biases)\n",
-    "        gradient = tf.gradients(pred[0,feature], x)\n",
+    "        gradient = tf.gradients(pred[0, feature], x)\n",
     "\n",
     "        feed_dict = {x: image.reshape(1,784)} \n",
-    "        pred_v, grad=sess.run([pred,gradient],feed_dict=feed_dict)\n",
+    "        pred_v, grad=sess.run([pred, gradient], feed_dict=feed_dict)\n",
     "\n",
     "        #print(grad[0])\n",
     "        #s_map=np.abs(np.clip(grad[0],0,np.max(grad[0])))\n",
     "        #s_map=np.abs(np.clip(grad[0],np.min(grad[0]),0))\n",
     "        #s_map=s_map.reshape(28,28)\n",
-    "        s_map=np.abs(grad[0].reshape(28,28))\n",
-    "        s_map/=np.max(s_map)\n",
-    "        s_map[s_map<0.33]=0.0\n",
+    "        s_map = np.abs(grad[0].reshape(28,28))\n",
+    "        s_map /= np.max(s_map)\n",
+    "        s_map[s_map<0.33] = 0.0\n",
     "        \n",
     "        fig, axes = plt.subplots(nrows=1, ncols=2)\n",
-    "        axes[0].matshow(image.reshape(28,28),cmap='gray')\n",
-    "        pmap=axes[1].matshow(s_map,cmap='Reds')\n",
+    "        axes[0].matshow(image.reshape(28,28), cmap='gray')\n",
+    "        pmap=axes[1].matshow(s_map, cmap='Reds')\n",
     "        cbar=plt.colorbar(pmap, fraction=0.025, pad=0.0)\n",
     "        cbar.set_clim(0, 1.0)\n",
     "        cbar.draw_all()\n",
@@ -671,7 +670,7 @@
    "source": [
     "for i in range(100):\n",
     "    if np.argmax(mnist.train.labels[i])==1:\n",
-    "        saliency_map(mnist.train.images[i],np.argmax(mnist.train.labels[i]))"
+    "        saliency_map(mnist.train.images[i], np.argmax(mnist.train.labels[i]))"
    ]
   },
   {
@@ -709,18 +708,18 @@
     "        \n",
     "        with tf.get_default_graph().gradient_override_map({'Relu': 'GuidedBackprop'}):\n",
     "            pred = conv_net(x, weights, biases)\n",
-    "            gradient = tf.gradients(pred[0,feature], x)\n",
+    "            gradient = tf.gradients(pred[0, feature], x)\n",
     "\n",
     "        feed_dict = {x: img.reshape(1,784)} \n",
-    "        pred_v, grad=sess.run([pred,gradient],feed_dict=feed_dict) \n",
+    "        pred_v, grad=sess.run([pred, gradient], feed_dict=feed_dict) \n",
     "\n",
     "        img=img.reshape(28,28)\n",
     "        guided_backprop_map=np.abs(grad[0].reshape(28,28))\n",
     "        guided_backprop_map/=np.max(guided_backprop_map)\n",
     "        \n",
     "        fig, axes = plt.subplots(nrows=1, ncols=2)\n",
-    "        axes[0].matshow(img.reshape(28,28),cmap='gray')\n",
-    "        pmap=axes[1].matshow(guided_backprop_map.reshape(28,28),cmap='Reds')\n",
+    "        axes[0].matshow(img.reshape(28,28), cmap='gray')\n",
+    "        pmap=axes[1].matshow(guided_backprop_map.reshape(28,28), cmap='Reds')\n",
     "        cbar=plt.colorbar(pmap, fraction=0.025, pad=0.0)\n",
     "        cbar.set_clim(0, 1.0)\n",
     "        cbar.draw_all()\n",
@@ -846,7 +845,7 @@
    "source": [
     "for i in range(100):\n",
     "    if np.argmax(mnist.test.labels[i])==9:\n",
-    "        guided_relu_map(mnist.test.images[i],np.argmax(mnist.test.labels[i]))"
+    "        guided_relu_map(mnist.test.images[i], np.argmax(mnist.test.labels[i]))"
    ]
   },
   {
@@ -888,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
