revised all the projects

--- a/mnist_on_multiple_gpus/MNIST on Multiple GPUs.ipynb
+++ b/mnist_on_multiple_gpus/MNIST on Multiple GPUs.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -426,7 +426,59 @@
       "\n",
       "EPOCH 3 ...\n",
       "Validation Accuracy = 0.943\n",
-      "\n"
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.951\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.961\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.968\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.975\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.972\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.973\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.975\n",
+      "\n",
+      "EPOCH 11 ...\n",
+      "Validation Accuracy = 0.976\n",
+      "\n",
+      "EPOCH 12 ...\n",
+      "Validation Accuracy = 0.975\n",
+      "\n",
+      "EPOCH 13 ...\n",
+      "Validation Accuracy = 0.977\n",
+      "\n",
+      "EPOCH 14 ...\n",
+      "Validation Accuracy = 0.976\n",
+      "\n",
+      "EPOCH 15 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 16 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 17 ...\n",
+      "Validation Accuracy = 0.982\n",
+      "\n",
+      "EPOCH 18 ...\n",
+      "Validation Accuracy = 0.978\n",
+      "\n",
+      "EPOCH 19 ...\n",
+      "Validation Accuracy = 0.977\n",
+      "\n",
+      "EPOCH 20 ...\n",
+      "Validation Accuracy = 0.982\n",
+      "\n",
+      "it takes 17.171430 (s)\n"
      ]
     }
    ],
